Fix background scroll when modal opened on ios & fix ios input appearance

--- a/src/sass/elements/_inputs.sass
+++ b/src/sass/elements/_inputs.sass
@@ -73,6 +73,8 @@ input, select, .chosen-container
   cursor: pointer
   @extend .size-small
   @extend .weight-regular
+  appearance: none
+  border-radius: 0 !important
   box-shadow: none !important
   background: $background !important
   border: $formInputBorder
